# metropolis

./: .dockerignore  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  _config.yml  api3.md  celerybeat-schedule  default.nix  docker-compose.yml  docker_entrypoint.sh  flake.nix  git-pre-commit.sh  manage.py  notifs.md  package-lock.json  package.json  playwright.config.js  postgres-init-db.sh  pyproject.toml  qodana.yaml  report.html  requirements.txt  run.sh  salt  sanitize-markdown.patch  shell.nix  tv-clubs.md  unfmted.py  update_staffs.py
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  jekyll-gh-pages.yml  lint.yml  nix.yml  playwright.yml  qodana_code_quality.yml  test.yml  tests.yml
core/: admin.py  apps.py  forms.py  markdown.py  middleware.py  schema.py  storages.py  tasks.py  tests.py  urls.py  util.py
core/api/: Makefile  api.proto  api_pb2.py  api_pb2_grpc.py  comment_urls.py  types.proto  urls.py
core/api/serializers/: __init__.py  announcement.py  blogpost.py  comments.py  course.py  custom.py  organization.py  tag.py  term.py  timetable.py  user.py
core/api/utils/: __init__.py  fallback.py  github.py  gravatar.py  last_modified.py  mixins.py  parse_date.py  permissions.py  polymorphism.py  posts.py
core/api/views/: __init__.py  announcement.py  auth.py  comment.py  comments.py  etc.py  events.py  fallback.py  feeds.py  meta.py  notifs.py  organization.py  staff.py  stream.py  term.py  timetable.py  user.py  widget.py
core/api2/schema/: __init__.py  course.py  notification.py  organization.py  post.py  rfp.py  tag.py  user.py
core/api_v2/: urls.py
core/api_v2/serializers/: __init__.py  announcement.py  course.py  organization.py  timetable.py
core/api_v2/views/: __init__.py  (+3 more)
core/fixtures/: k-on.yml
core/markdown/: embed.py  emoji.py
core/migrations/: 0001_initial.py  0002_alter_user_graduating_year.py  0003_auto_20210814_2310.py  0004_rename_approver_announcement_supervisor.py  0005_auto_20210815_0117.py  0006_auto_20210815_0504.py  0007_remove_announcement_replaces.py  0008_remove_term_num_courses.py  0009_auto_20210822_1755.py  0010_tag_color.py  0011_auto_20210822_2029.py  0012_organization_applications_open.py  0013_auto_20210827_1942.py  0014_organizationurl.py  0015_remove_tag_color.py  0016_organization_slug.py  0017_auto_20210830_0926.py  0018_auto_20210830_0926.py  0019_auto_20210830_0942.py  0020_auto_20210830_1038.py  0021_auto_20210831_0216.py  0022_alter_event_is_instructional.py  0023_blogpost.py  0024_blogpost_slug.py  0025_event_schedule_format.py  0026_event_term.py  0027_alter_event_schedule_format.py  0028_auto_20210901_0625.py  0029_alter_event_schedule_format.py  0030_auto_20210901_1059.py  0031_alter_user_graduating_year.py  0032_alter_user_timezone.py  0033_alter_blogpost_options.py  0034_alter_organization_options.py  0035_rename_description_organization_long_description.py  0036_auto_20210913_0226.py  0036_user_is_teacher.py  0037_merge_0036_auto_20210913_0226_0036_user_is_teacher.py  0038_course_submitter.py  0039_alter_user_graduating_year.py  (+61 more)
core/models/: __init__.py  announcement.py  choices.py  course.py  organization.py  post.py  pubreq.py  raffle.py  rfp.py  tag.py  test_post.py  timetable.py  user.py  util.py
core/templatetags/: banners.py  common_tags.py  gravatar_tags.py  link_tags.py  markdown_tags.py  pubreq_tags.py  settings_tags.py  tagcolor_tags.py  timetable_tags.py
core/utils/: __init__.py  actions.py  choices.py  fields.py  file_upload.py  filters.py  generate_slam.py  get_schedule.py  hijack.py  local_date.py  mail.py  multiselectfield.py  ratelimiting.py  sitemaps.py  tag_color.py  tasks.py  test_get_schedule.py  test_posts.py  test_schedules.py  types.py  utils.py
core/views/: __init__.py  announcement.py  calendar.py  course.py  index.py  map.py  mixins.py  organization.py  post.py  pubreq.py  raffle.py  timetable.py  tv.py  user.py
courseshare/: asgi.py  settings.py  urls.py  wsgi.py
docs/: api3.md  config.md  onboarding.md  scopes.md  tv-clubs.md
etc/: .gitignore  courses-to-lines.pl  gen_qr.py  get_random
innen/: go.mod
metropolis/: .dockerignore  asgi.py  celery.py  config.py  docker_settings.py  local_settings_sample.py  settings.py  timetable_formats.py  urls.py  wsgi.py
scripts/: mapdata.py  migrations.py  update_staffs.py
static/css/: fullcalendar.min.css  mapbox-gl.css
static/js/: fullcalendar.min.js  luxon.min.js  mapbox-gl.js  materialize.min.js
templates/: 403.html  404.html  429.html  500.html  base.html  manifest.json  offline.html  serviceworker.js
templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html  password_set.html  signup.html  superbase.html
templates/admin/: app_index.html  app_list.html  base.html  base_site.html  change_form.html  change_list.html  delete_selected_confirmation.html  index.html  login.html  nav_sidebar.html
templates/captcha/: widget_v3.html
templates/flatpages/: blank.html  clue.html  default.html  markdown.html  welcome.html
templates/ganalytics/: snippet.html
templates/oauth2_provider/: application_confirm_delete.html  application_detail.html  application_form.html  application_list.html  application_registration_form.html  authorize.html  authorized-oob.html  authorized-token-delete.html  authorized-tokens.html
tests/: Dockerfile  api3.spec.js  docker-compose.yml  posts.py
timetable/: admin.py  forms.py  middleware.py  storages.py  urls.py
timetable/migrations/: 0001_initial.py  0002_auto_20201123_0001.py  0003_auto_20210202_0001.py
timetable/models/: course.py  timetable.py  user.py
timetable/templatetags/: common_tags.py  link_tags.py  settings_tags.py  timetable_tags.py
timetable/views/: __init__.py  course.py  index.py  mixins.py  timetable.py  user.py
(+168 files in other folders)
