[tool.isort]
profile = "black" # we use check for make fmt*
skip_gitignore = true # no need to fmt ignored
skip = "core/migrations" # no need to format migrations

[tool.black]
extend_exclude = "core/migrations/.*" # see tool.isort.skip

[tool.poetry]
name = "metropolis"
version = "2.0"
description = "William Lyon Mackenzie's online hub for announcements, calendar events, clubs, and timetables"
license = "AGPLv3"
authors = ["nyiyui <+@nyiyui.ca>", "Jason Cameron <jason@jasoncameron.dev>"]
readme = "README.md"
repository = "https://github.com/wlmac/metropolis"
documentation = "https://docs.maclyonsden.com"


[tool.poetry.dependencies]
python = "^3.12.1"
asgiref = "^3.7.2"
bleach = "^4.1.0"
certifi = "*"
cffi = "*"
charset-normalizer = "*"
cryptography = "41.0.6"
defusedxml = "^0.7.1"
Django = "5.0"
django-allauth = "^0.58.1"
django-cors-headers = "^3.10.0"
django-crispy-forms = "*"
django-oauth-toolkit = "*"
django-pwa = "*"
django-redis = "^5.0.0"
django-select2 = "*"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "*"
jwcrypto = "^1.5.1"
Markdown = ">3.0.0"
martor = "*"
oauthlib = "^3.2.2"
packaging = "^23.0"
Pillow = "^10.0.1"
pycparser = "^2.20"
Pygments = "2.15.0"
PyJWT = "^2.4.0"
pyparsing = "^3.0.6"
python3-openid = "^3.2.0"
pytz = "*"
redis = "4.4.4"
requests = "*"
requests-oauthlib = "1.3.0"
six = "1.16.0"
urllib3 = "*"
webencodings = "^0.5.1"
wrapt = "*"
django_ical = "1.8.3"
platformdirs = "2.6.2"
celery = "*"
exponent_server_sdk = "*"
django-hijack = "^3.4.1"
cachetools = "^5.3.1"
frozendict = "^2.4.0"
drf-spectacular = "0.27.0"
psycopg = [
    { version = "^3.1.16", markers = "sys_platform == 'linux'" },
    { extras = ["binary"], version = "^3.1.16", markers = "sys_platform != 'linux'" },
]
gunicorn = "20.1.0"
sentry-sdk = { extras = ["django", "celery"], version = "^1.40.0" }

#django-stubs = "*"
black = "*"
isort = "*"

#[tool.mypy]
#plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "metropolis.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
